# failed_project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/crypto_primitives/: CMakeLists.txt
src/database/: CMakeLists.txt
src/database/include/: database_provider.h  mongo_provider.h
src/database/src/: mongo_provider.cc
src/node/: CMakeLists.txt  node.thrift
src/node/gen-cpp2/: Node.cpp  Node.h  Node.tcc  NodeAsyncClient.h  Node_client.cpp  Node_custom_protocol.h  Node_processmap_binary.cpp  node_constants.cpp  node_constants.h  node_data.cpp  node_data.h  node_types.cpp  node_types.h  node_types.tcc  node_types_custom_protocol.h
src/node/include/: node.h  peer.h  types.h
src/node/src/: .node.cc.swp  node.cc  node_daemon.cc  peer.cc
src/node/tests/: CMakeLists.txt  node_sample_test.cc
third_parties/include/libbson-1.0/: bson-stdint.h
third_parties/include/libmongoc-1.0/: mongoc-config.h
third_parties/include/parquet/: parquet_version.h
third_parties/include/thrift/lib/cpp/protocol/: TJSONProtocol.h
third_parties/include/thrift/lib/cpp2/gen-cpp2/: Sasl_constants.h
third_parties/include/thrift/lib/cpp2/transport/util/: ConnectionManager.h
third_parties/include/tmp/fbthrift-2018.04.02.00/thrift/lib/cpp2/gen-cpp2/: SaslAuthService_custom_protocol.h
third_parties/lib/: libarrow.so.0  libbson-1.0.la  libbson-1.0.so.0.0.0  libbsoncxx.so.3.3.1  libcassandra.so.2.8.1  libevent_openssl-2.0.so.5  libexpat.la  libfolly.la  libfollybenchmark.la  libfollyinit.la  libfollylogging.la  libmongoc-1.0.la  libmongoc-1.0.so.0.0.0  libparquet.so.1  libparquet.so.1.4.0  libuuid.so.1  libwangle.so.1  libwangle.so.1.0.0
third_parties/lib/cmake/libbson-1.0/: libbson-1.0-config-version.cmake  libbson-1.0-config.cmake
third_parties/lib/cmake/libmongoc-1.0/: libmongoc-1.0-config.cmake
third_parties/lib/cmake/mstch/: mstch-targets.cmake
third_parties/lib/pkgconfig/: libmongoc-ssl-1.0.pc  parquet.pc
